SonarLint 코드 스멜 제거